kube-infra/kustomize/service-mesh/linkerd/overlays/demo/linkerd-viz-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-viz-ingress
  namespace: linkerd
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-demo-aws
spec:
  tls:
  - hosts:
    - linkerd.bradmccoy.io
    secretName: letsencrypt-demo-aws
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8084
    host: linkerd.bradmccoy.io
